crates/ratatui-kit/tests/ui/fail/any_element_borrow_escape.rs
use ratatui_kit::prelude::*;

fn leak_any_element<'short>(source: &'short mut AnyElement<'static>) -> AnyElement<'static> {
    AnyElement::from(source)
}

fn main() {}
